--- a/lesson4/mp-frozen/pages/section/section.wxml
+++ b/lesson4/mp-frozen/pages/section/section.wxml
@@ -5,6 +5,12 @@
     <!-- 播放控件 -->
     <video id="myVideo" src="{{page.url}}" controls="{{true}}" show-fullscreen-btn='{{false}}' style="width:100%;height:90rpx" bindplay="play" bindended="stop"  bindtimeupdate="timeupdate"/>
     <audio id="myAudio" style='display:none' />
+    <view class="keywords">
+        <block wx:for="{{page.keywords}}" wx:for-item="line" wx:for-index="index" wx:key='index'>
+            <text bindtap="speak"
+             data-en="{{line.en}}">{{line.en +' ' + line.zh+'\n'}}</text>
+        </block>
+    </view>
     <view style="border:1rpx solid blue">
       <radio name="speed" bindtap="slowPlay" checked="{{speed == 'slow'}}">慢放</radio>
       <radio name="speed" bindtap="normalPlay" checked="{{speed == 'normal'}}">快放</radio>
