--- a/lesson4/mp-frozen/pages/section/section.wxss
+++ b/lesson4/mp-frozen/pages/section/section.wxss
@@ -1,5 +1,8 @@
 /* pages/main.wxss */
-
+page{
+  height: 100%;
+  overflow:hidden;
+}
 .root{
   width:100%;
   height:100%;
@@ -8,13 +11,33 @@
   overflow:hidden;
 }
 .header{
-  height:580rpx;
+  height:910rpx;
   width:750rpx;
   flex-grow:0;
-
   overflow:hidden;
 }
-
+movable-area{
+  height:100%;
+  width:100%;
+  position:absolute;left:0;top:0;
+  pointer-events: none;
+}
+movable-view {
+  width:60%;
+  pointer-events: auto;
+}
+.header video{
+  width:100%;height:80rpx;
+  padding:-20rpx;
+  margin-top:-10rpx;
+  margin-bottom:-10rpx;
+}
+.header .controls{
+  margin-top:-20rpx;
+  font-size:20rpx;
+  line-height:40rpx;
+  height:40rpx;
+}
 scroll-view{
   width:100%;
   overflow: scroll;
@@ -38,8 +61,8 @@ rich-text{
   color:#666666;
 }
 .keywords{
-  position:absolute;top:100rpx;left:100rpx;
-  background:rgba(255,255,0, 0.3);
-  width:80%;
+  position:absolute;
+  background:rgba(255,255,255, 0.5);
+  width:100%;
   color:#fffb00;
 }
