--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/print.css' | relative_url }}" media="print" type="text/css">
+    <style>
+      #sidebar ul li{
+        font-size:30px;
+      }
+    </style>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -21,7 +26,7 @@
              <h1>{{ site.title | default: site.github.repository_name }}</h1>
              <hr>
         </a>
-        <h2>{{ site.description | default: site.github.project_tagline }}</h2>
+        <h2 style="width:100%">{{ site.description | default: site.github.project_tagline }}</h2>
         {% if site.github.is_project_page %}
           <a href="{{ site.github.repository_url }}" class="button"><small>View project on</small> GitHub</a>
         {% endif %}
