--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/print.css' | relative_url }}" media="print" type="text/css">
     <style>
       #sidebar ul li{
-        font-size:30px;
+        font-size:16px;
       }
     </style>
 
@@ -55,10 +55,10 @@
           {% endif %}
           <hr>
           <ul>
-            <li>第一章： 圆的艺术</li>
-            <li>第二章： 七巧板的坐标</li>
-            <li>第三章： 灯塔照我远行</li>
-            <li>第四章： 机器人的手臂</li>
+            <li><a href='/lesson1/'>第一章： 圆的艺术</a></li>
+            <li><a href='/lesson2/'>第二章： 七巧板的坐标</a></li>
+            <li><a href='/lesson3/'>第三章： 灯塔照我远行</a></li>
+            <li><a href='/lesson4/'>第四章： 机器人的手臂</a></li>
           </ul>
 
           {% if site.github.is_project_page %}
