--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,6 +13,9 @@
       .preface{
         background: #ff9;
       }
+      img.sample{
+        border:3px double #ddd;
+      }
     </style>
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
