--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -174,7 +174,7 @@
 <script src="http://api.github.com/repos/jindw/xmldom/issues?label=parser&callback=onMessage"></script>
 -->
 
-<script src="http://api.github.com/repos/nan-king/p4nan/issues?labels=message::{{urls[1]}}&callback=onMessage"></script>
+<script src="https://api.github.com/repos/nan-king/p4nan/issues?labels=message::{{urls[1]}}&callback=onMessage"></script>
 
 <textarea class="msg" placeholder="Leave your mark" onclick="window.open('https://github.com/nan-king/p4nan/issues/new?labels=message%3A%3A{{urls[1]}}')"></textarea>
           {% if site.github.is_project_page %}
