--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,6 +15,12 @@
       img.sample{
         border:3px double #ddd;
       }
+      @media only screen and (max-width: 360px){
+
+        header h1 {
+            font-size: 46px;
+        }
+      }
     </style>
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
