--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -29,8 +29,8 @@
 
 {% seo %}
   </head>
-
-  <body oncontextmenu="return false" style="-webkit-touch-callout:none;-webkit-user-select:none" contenteditable="true">
+<!---webkit-touch-callout:none;-webkit-user-select:none"  -->
+  <body oncontextmenu="return false" style="-webkit-touch-callout:none;touch-callout:none" contenteditable="true">
     <header>
       <div class="inner">
         <a href="{{ '/' | absolute_url }}">
