--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -30,7 +30,7 @@
 {% seo %}
   </head>
 <!---webkit-touch-callout:none;-webkit-user-select:none"  -->
-  <body oncontextmenu="return false" style="-webkit-touch-callout:none;touch-callout:none" contenteditable="true">
+  <body oncontextmenu="return false" style="-webkit-touch-callout:none;touch-callout:none">
     <header>
       <div class="inner">
         <a href="{{ '/' | absolute_url }}">
