--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,6 +16,12 @@
       img.sample{
         border:3px double #ddd;
       }
+      body{
+		caret-color: yellow;
+	}
+	::selection{
+		background-color:rgba(0,0,0,0);
+	}
       @media only screen and (max-width: 360px){
 
         header h1 {
